// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar all 1`] = `
.c3 {
  flex: 1 1;
  overflow: hidden;
  object-fit: contain;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-height: 100%;
  padding: 12px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c4 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 48px;
}

.c6 {
  align-self: center;
  font-size: 22px;
  line-height: 28px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    height: 24px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 StyledAvatar-sc-1suyamb-1"
      role="figure"
    >
      <img
        class="c3"
        role="presentation"
        src=""
      />
    </div>
    <div
      class="c4"
    />
    <div
      class="c5"
    >
      test all props and children
    </div>
    <div
      class="c4"
    />
    <div
      class="c2 StyledAvatar-sc-1suyamb-1"
    >
      <span
        class="c6 "
      >
        SY
      </span>
    </div>
  </div>
</div>
`;

exports[`Sidebar children 1`] = `
.c4 {
  flex: 1 1;
  overflow: hidden;
  object-fit: contain;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-height: 100%;
  padding: 12px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3 StyledAvatar-sc-1suyamb-1"
        role="figure"
      >
        <img
          class="c4"
          role="presentation"
          src=""
        />
      </div>
      children test
    </div>
  </div>
</div>
`;

exports[`Sidebar footer 1`] = `
.c5 {
  flex: 1 1;
  overflow: hidden;
  object-fit: contain;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-height: 100%;
  padding: 12px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c3 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 48px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    height: 24px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
    <div
      class="c3"
    />
    <div
      class="c4 StyledAvatar-sc-1suyamb-1"
      role="figure"
    >
      <img
        class="c5"
        role="presentation"
        src=""
      />
    </div>
  </div>
</div>
`;

exports[`Sidebar header 1`] = `
.c3 {
  flex: 1 1;
  overflow: hidden;
  object-fit: contain;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-height: 100%;
  padding: 12px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c4 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 48px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    height: 24px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 StyledAvatar-sc-1suyamb-1"
      role="figure"
    >
      <img
        class="c3"
        role="presentation"
        src=""
      />
    </div>
    <div
      class="c4"
    />
    <div
      class="c5"
    />
  </div>
</div>
`;

exports[`Sidebar renders 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-height: 100%;
  padding: 12px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="test id"
  >
    <div
      class="c2"
    />
  </div>
</div>
`;

exports[`Sidebar renders outside grommet 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-height: 100%;
  padding: 12px;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

@media only screen and (max-width: 768px) {
  .c0 {
    padding: 6px;
  }
}

<div
  class="c0"
  id="test id"
>
  <div
    class="c1"
  />
</div>
`;
